2012-01-27  Andrey Belevantsev  <abel@ispras.ru>

	PR middle-end/51389
	* Makefile.in (tree-data-ref.o): Depend on $(PARAMS_H).
	* tree-data-ref.h (find_data_references_in_loop): Remove declaration.
	* tree-data-ref.c (find_data_references_in_loop): Make static.
	(compute_all_dependences): Change return type to bool.  Bail out
	for too many datarefs in a loop.  Move the hunk resetting the data
	dependences vector from ...
	(compute_data_dependences_for_loop): ... here.  Account for
	compute_all_dependences returning false.
	(compute_data_dependences_for_bb): Likewise.
	* params.def (PARAM_LOOP_MAX_DATAREFS_FOR_DATADEPS): New param.
	* doc/invoke.texi (loop-max-datarefs-for-datadeps): Document it.

2012-01-27  Richard Guenther  <rguenther@suse.de>

	PR middle-end/51959
	* expr.c (store_field): Use the alias-set of the scratch memory
	for storing to it.

2012-01-27  Tom de Vries  <tom@codesourcery.com>

	PR tree-optimization/51990
	* tree-ssa-sccvn.c (copy_reference_ops_from_ref): Handle WITH_SIZE_EXPR.
	* tree-ssa-pre.c (create_component_ref_by_pieces_1): Same.

2012-01-27  Jakub Jelinek  <jakub@redhat.com>

	PR debug/52001
	* var-tracking.c (reverse_op): Don't add any reverse operation
	if V already has any constant locations.

2012-01-27  Sandra Loosemore  <sandra@codesourcery.com>

	* doc/invoke.texi: Correct usage of "command line" (noun)
	vs "command-line" (adjective) throughout.

2012-01-27  Sandra Loosemore  <sandra@codesourcery.com>

	* doc/invoke.texi (Language Independent Options): Move
	-Wcoverage-mismatch blurb from here....
	(Warning Options): ...to here.

2012-01-27  Peter Bergner  <bergner@vnet.ibm.com>

	* config/rs6000/rs6000.c (rs6000_option_override_internal):
	Set rs6000_always_hint to false for 476.

2012-01-27  Matthias Klose  <doko@ubuntu.com>

	* gcc.c (add_sysrooted_prefix): Remove trailing dir separator from
	  system root.
	* incpath.c (add_standard_paths): Likewise.

2012-01-27  Richard Henderson  <rth@redhat.com>
