@@ -1,3 +1,12 @@
+2012-01-27  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/50444
+	* expr.c (mem_ref_refers_to_non_mem_p): New function.
+	(expand_assignment): Use it.  Properly handle misaligned
+	bases when expanding stores to component references.
+	(expand_expr_real_1): Use mem_ref_refers_to_non_mem_p and
+	refactor that case.
+
 2012-01-27  Andrey Belevantsev  <abel@ispras.ru>
 
 	PR middle-end/51389
